<resources>
    <string name="_1x">1X</string>
    <string name="_item_differences">%s ítems diferentes</string>
    <string name="_product_differences">%s diferencias de productos</string>
    <string name="_quantity_differences">%s diferencias de cantidad</string>
    <string name="_total_counted">%s total contado</string>
    <string name="accept">Aceptar</string>
    <string name="action_settings">Configuración</string>
    <string name="added">Agregado</string>
    <string name="added_plural">Agregados</string>
    <string name="reception_control">Control de recepción</string>
    <string name="error_when_deleting_counts">Error al eliminar el arqueo.</string>
    <string name="error_when_deleting_counts_file_not_found">Error al eliminar el arqueo. Archivo no encontrado.
    </string>
    <string name="an_error_occurred_while_deleting_counts">Ha ocurrido un error al eliminar los arqueos</string>
    <string name="an_error_occurred_while_requesting_new_counts">Ha ocurrido un error al solicitar nuevos arqueos
    </string>
    <string name="an_error_occurred_while_trying_to_add_the_item">Ha ocurrido un error al intentar agregar el ítem
    </string>
    <string name="an_error_occurred_while_trying_to_add_the_item_code">Ha ocurrido un error al intentar agregar el
        código de ítem
    </string>
    <string name="an_error_occurred_while_trying_to_delete_the_count">Ha ocurrido un error al intentar eliminar el
        arqueo
    </string>
    <string name="an_error_occurred_while_trying_to_reset_the_count">Ha ocurrido un error al intentar reiniciar el
        arqueo
    </string>
    <string name="an_error_occurred_while_trying_to_load_the_order">Ha ocurrido un error al intentar cargar el arqueo
    </string>
    <string name="an_error_occurred_while_trying_to_save_the_count">Ha ocurrido un error al intentar guardar el arqueo
    </string>
    <string name="an_error_occurred_while_updating_item_codes">Ha ocurrido un error al actualizar los códigos de ítems
    </string>
    <string name="an_error_occurred_while_updating_the_description_of_the_item_in_the_database">Ha ocurrido un error al
        actualizar la descripción del ítem en la base de datos
    </string>
    <string name="app_configuration">Configuración de la aplicación</string>
    <string name="app_milestone">Milestone12</string>
    <string name="app_name">WarehouseCounter</string>
    <string name="app_panel_url_can_not_be_obtained">No se puede obtener la URL del panel de la aplicación</string>
    <string name="auto_configuration">Configuración automática</string>
    <string name="barcode_failure">No se ha capturado ningún código de barras</string>
    <string name="barcode_reader_not_initialized">Lector de códigos no inicializado</string>
    <string name="barcode_success">Código de barras leído con éxito</string>
    <string name="bluetooth_printer">Impresora Bluetooth</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="cancel">Cancelar</string>
    <string name="cancel_count">Cancelar arqueo</string>
    <string name="cannot_write_to_external_storage">No se puede escribir en el almacenamiento externo</string>
    <string name="app_dont_have_necessary_permissions">La aplicación no tiene los permisos necesarios</string>
    <string name="category">Categoría</string>
    <string name="client">Cliente</string>
    <string name="client_description">Cliente: %1$s %2$s Descripción: %3$s</string>
    <string name="client_has_no_software_packages">El cliente no tiene paquetes de software</string>
    <string name="closing_connection">Cerrando conexión…</string>
    <string name="code">Código</string>
    <string name="code_link">Vincular códigos</string>
    <string name="code_read">Lectura de códigos</string>
    <string name="collapse_panel">Colapsar panel</string>
    <string name="collector_type">Tipo de colector</string>
    <string name="completed">Completado</string>
    <string name="completed_counts">Arqueos completados</string>
    <string name="configuration">Configuración</string>
    <string name="configuration_access">Acceso a la configuración</string>
    <string name="configuration_applied">Configuración aplicada</string>
    <string name="configuration_not_loaded">Configuración no cargada</string>
    <string name="configuration_qr_code">Código QR de configuración</string>
    <string name="configure_proxy_question">¿Configurar proxy?</string>
    <string name="confirm">Confirmar</string>
    <string name="confirm_count">Confirmar arqueo</string>
    <string name="connection_error">Error de conexión</string>
    <string name="connection_success">Conexión OK</string>
    <string name="continue_">Continuar…</string>
    <string name="copy_ok">Copia OK</string>
    <string name="copying_database">Copiando base de datos…</string>
    <string name="count">Arqueo</string>
    <string name="count_log">Registro de conteo</string>
    <string name="count_select">Seleccionar arqueo</string>
    <string name="count_without_description">Arqueo sin descripción</string>
    <string name="counted">contado</string>
    <string name="counted_plural">contados</string>
    <string name="division_char">Carácter de división de códigos</string>
    <string name="email">Correo electrónico</string>
    <string name="error_registry">Registro de errores</string>
    <string name="generate_configuration_qr_code">Generar código QR de configuración</string>
    <string name="password">Contraseña</string>
    <string name="printer">Impresora</string>
    <string name="printer_use_bt_default">Usar impresora BT</string>
    <string name="program_options">Opciones del programa</string>
    <string name="read_barcode">Leer código</string>
    <string name="remove_old_error_registries">Eliminar registros de errores antiguos</string>
    <string name="select_package">Seleccionar paquete</string>
    <string name="show_configuration_button">Mostrar botón configuración</string>
    <string name="show_configuration_button_summary">Mostrar el botón en la pantalla de ingreso</string>
    <string name="sound_alert_if_pending_orders">Alerta sonora si hay arqueos</string>
    <string name="sound_alert_if_there_are_orders_waiting_in_the_inbox">Alerta sonora si hay arqueos esperando en la
        bandeja de entrada
    </string>
    <string name="vibrate_if_pending_orders">Vibrar si hay arqueos</string>
    <string name="vibrate_if_there_are_orders_waiting_in_the_inbox">Vibrar si hay arqueos esperando en la bandeja de
        entrada
    </string>
    <string name="automatic_sending_of_completed_counts">Envío automático de arqueos completados</string>
    <string name="automatic_sending">Envío automático</string>
    <string name="account_configuration">Configuración de la cuenta</string>
    <string name="account">Cuenta</string>
    <string name="send_check_digit">Enviar dígito verificador de código de barra</string>
    <string name="check_digit">Dígito verificador</string>
    <string name="change_the_screen_orientation_when_rotating_the_device">Cambia la orientación de la pantalla al rotar
        el dispositivo
    </string>
    <string name="allow_screen_rotation">Permitir rotación de pantalla</string>
    <string name="if_you_have_a_configuration_barcode_you_can_capture_it_here">Si dispone de un código de barras de
        configuración puede carpturarlo aquí
    </string>
    <string name="capture_configuration_barcode">Capturar código de barras de configuración</string>
    <string name="if_you_have_a_configuration_code_you_can_enter_it_here">Si dispone de un código de texto de
        configuración puede ingresarlo aquí
    </string>
    <string name="enter_configuration_text_code">Ingresar código de texto de configuración</string>
    <string name="action_rfid_connect">Reconectar lector RFID</string>
    <string name="pref_header_image_control_conf">ImageControl</string>
    <string name="rfid_read_power">Potencia de lectura</string>
    <string name="sync_interval">Intervalo de sincronización (seg)</string>
    <string name="show_scanned_code">Mostrar código escaneado</string>
    <string name="show_scanned_code_in_screen">Mostrar en pantalla el código escaneado</string>
    <string name="allow_unknown_codes">Permitir códigos desconocidos</string>
    <string name="accept_nonexistent_codes_in_the_database">Aceptar códigos inexistentes en la base de datos</string>
    <string name="device_configuration_summary">Configuración de dispositivos, tipo de lector, impresora, NFC, RFID.
    </string>
    <string name="account_configuration_summary">Configuración de la cuenta y otras opciones de configuración automática
        de la aplicación
    </string>
    <string name="application_summary">Opciones generales de la aplicación</string>
    <string name="devices_configuration">Configuración de dispositivos</string>
    <string name="pref_header_application">Aplicación</string>
    <string name="pref_header_devices">Dispositivos</string>
    <string name="settings">Configuración</string>
    <string name="imagecontrol_webservice_settings">Configuración del Webservice de imágenes</string>
    <string name="use_net_printer">Usar impresora de red</string>
    <string name="printer_ip_net">IP Impresora</string>
    <string name="printer_port">Puerto</string>
    <string name="line_separator">Salto de línea</string>
    <string name="printer_power">Potencia</string>
    <string name="printer_speed">Velocidad</string>
    <string name="rfid_device_name">Nombre del dispositivo</string>
    <string name="play_sound_in_reading">Reproducir sonido en la lectura</string>
    <string name="vibration_in_reading">Vibración en la lectura</string>
    <string name="skip_repeated_readings">Omitir lecturas repetidas</string>
    <string name="use_rfid_device">Usar lector RFID</string>
    <string name="use_nfc">Usar NFC</string>
    <string name="rfid_scanner">Lector RFID</string>
    <string name="reset_to_factory">Reiniciar a fábrica</string>
    <string name="new_line_char_lf">LF</string>
    <string name="new_line_char_cr">CR</string>
    <string name="printer_preferences">Preferencias de impresión</string>
    <string name="access_password_to_the_application_configuration">Contraseña de acceso a la configuración de la
        aplicación
    </string>
    <string name="configuration_password">Contraseña de configuración</string>
    <string name="save_occurred_errors_in_a_file">Registra en un archivo los errores ocurridos</string>
    <string name="general_configuration">Configuración general</string>
    <string name="update_app">Actualizar aplicación</string>
    <string name="download_last_version">Descargar la última versión</string>
    <string name="trigger_scan">Disparar escáner</string>
    <string name="supported_symbologies">Simbologías admitidas</string>
    <string name="qr_code">QR Code</string>
    <string name="code_39">Code 39</string>
    <string name="ean_8">EAN 8</string>
    <string name="ean_13">EAN 13</string>
    <string name="code_128">Code 128</string>
    <string name="data_matrix">Data Matrix</string>
    <string name="upc_a">UPC A</string>
    <string name="aztec">Aztec</string>
    <string name="codabar">CODABAR</string>
    <string name="maxicode">MaxiCode</string>
    <string name="code_93">Code 93</string>
    <string name="pdf417">PDF417</string>
    <string name="rss_14">RSS 14</string>
    <string name="rss_expanded">RSS Expanded</string>
    <string name="upc_e">UPC E</string>
    <string name="refresh_order_interval">Intervalo de refresco de órdenes (seg)</string>
    <string name="automatic_print_label_of_completed_counts">Impresión automática de pedidos completados</string>
    <string name="automatic_printing">Impresión automática</string>
</resources>