<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="pref_general"
                  android:title="@string/general_configuration">

    <PreferenceCategory android:title="@string/auto_configuration">
        <Preference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_qrcode"
                android:key="ac_qr_code"
                android:title="@string/generate_configuration_qr_code"/>
        <Preference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_qrcode_scan"
                android:key="scan_config_code"
                android:summary="@string/if_you_have_a_configuration_barcode_you_can_capture_it_here"
                android:title="@string/capture_configuration_barcode"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/error_registry">
        <SwitchPreference
                android:defaultValue="true"
                android:icon="@drawable/ic_error"
                android:key="conf_general_registry_error"
                android:summary="@string/save_occurred_errors_in_a_file"
                android:title="@string/error_registry"/>
        <Preference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_delete"
                android:key="remove_log_files"
                android:title="@string/remove_old_error_registries"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/program_options">
        <com.dacosys.warehouseCounter.data.settings.custom.IntEditTextPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="60"
                android:icon="@drawable/ic_sync_interval"
                android:inputType="number"
                android:key="sync_interval"
                android:maxLength="1"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/sync_interval"/>
        <com.dacosys.warehouseCounter.data.settings.custom.IntEditTextPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="10"
                android:icon="@drawable/ic_sync_interval"
                android:inputType="number"
                android:key="sync_refresh_order"
                android:maxLength="1"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/refresh_order_interval"/>
        <SwitchPreference
                android:layout_height="wrap_content"
                android:defaultValue="true"
                android:icon="@drawable/ic_show_scanned_code"
                android:key="show_scanned_code"
                android:summary="@string/show_scanned_code_in_screen"
                android:title="@string/show_scanned_code"/>
        <SwitchPreference
                android:layout_height="wrap_content"
                android:defaultValue="true"
                android:icon="@drawable/ic_unknown_code"
                android:key="allow_unknown_codes"
                android:summary="@string/accept_nonexistent_codes_in_the_database"
                android:title="@string/allow_unknown_codes"/>
        <SwitchPreference
                android:layout_height="wrap_content"
                android:defaultValue="true"
                android:icon="@drawable/ic_screen_lock_rotation"
                android:key="allow_screen_rotation"
                android:summary="@string/change_the_screen_orientation_when_rotating_the_device"
                android:title="@string/allow_screen_rotation"/>
        <SwitchPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="true"
                android:icon="@drawable/ic_autosend"
                android:key="auto_send"
                android:summary="@string/automatic_sending_of_completed_counts"
                android:title="@string/automatic_sending"/>
        <SwitchPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="false"
                android:icon="@drawable/ic_printer"
                android:key="auto_print"
                android:summary="@string/automatic_print_label_of_completed_counts"
                android:title="@string/automatic_printing"/>
        <SwitchPreference
                android:defaultValue="true"
                android:icon="@drawable/ic_alert"
                android:key="conf_sound_on_pending_orders"
                android:summary="@string/sound_alert_if_there_are_orders_waiting_in_the_inbox"
                android:title="@string/sound_alert_if_pending_orders"/>
        <SwitchPreference
                android:defaultValue="true"
                android:icon="@drawable/ic_vibration"
                android:key="conf_shake_on_pending_orders"
                android:summary="@string/vibrate_if_there_are_orders_waiting_in_the_inbox"
                android:title="@string/vibrate_if_pending_orders"/>
        <EditTextPreference
                android:defaultValue=";"
                android:icon="@drawable/ic_code"
                android:inputType="textCapWords"
                android:key="division_char_text"
                android:maxLength="1"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/division_char"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/configuration_access">
        <SwitchPreference
                android:defaultValue="true"
                android:icon="@drawable/ic_visibility"
                android:key="conf_general_show_conf_button"
                android:summary="@string/show_configuration_button_summary"
                android:title="@string/show_configuration_button"/>
        <EditTextPreference
                android:defaultValue="9876"
                android:icon="@drawable/ic_password"
                android:key="conf_password"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:summary="@string/access_password_to_the_application_configuration"
                android:title="@string/configuration_password"/>
    </PreferenceCategory>

</PreferenceScreen>
