<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dacosys.warehouseCounter.HomeActivity">
    <item
        android:id="@+id/action_trigger_scan"
        android:icon="@drawable/ic_new_scan"
        android:title="@string/trigger_scan"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_read_barcode"
        android:icon="@drawable/ic_camera_scan"
        android:title="@string/read_barcode"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rfid_connect"
        android:icon="@drawable/ic_rfid"
        android:title="@string/action_rfid_connect"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
